[BugFix] fix search and channel creator abnormal rendering on firefox

--- a/webServer/client/assets/scss/_formbuttons.scss
+++ b/webServer/client/assets/scss/_formbuttons.scss
@@ -101,13 +101,13 @@ $formbutton-height: 30px;
         &.input, &.submit {
             display: none;
         }
-
-        &.input {
-            width: 0;
-            height: 16px;
-            line-height: 20px;
-            padding: 15px 5px 17px 0px;
-        }
+        // NOTE: with section below, firefox will not work
+        // &.input {
+        //     width: 0;
+        //     height: 16px;
+        //     line-height: 20px;
+        //     padding: 15px 5px 17px 0px;
+        // }
         &.submit {
             cursor: pointer;
             height: $formbutton-height;
